# smart-study

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc  vcpkg.json
.github/workflows/: ci.yml  format-check.yml
resources/styles/: main.qss
src/: main.cpp
src/presentation/views/: MainWindow.cpp  MainWindow.h
src/presentation/widgets/: FlashCard.h  FlashCardEditorWidget.cpp  FlashCardEditorWidget.h  FlashCardManager.cpp  FlashCardManager.h  FlashCardSet.h  FlashCardWidget.cpp  FlashCardWidget.h  LiftButton.cpp  LiftButton.h  Sidebar.cpp  Sidebar.h  TimerWidget.cpp  TimerWidget.h  TopicsPanel.cpp  TopicsPanel.h
src/utils/: GuiUtils.cpp  GuiUtils.h
